tests/tst/errors/InvalidConfig.php
<?php
/**
 * @package axy\errors
 */

declare(strict_types=1);

namespace axy\errors\tests\tst\errors;

class InvalidConfig extends \axy\errors\InvalidConfig implements Error
{
}
